--- a/01-Emmet/css/master.css
+++ b/01-Emmet/css/master.css
@@ -6,6 +6,30 @@ body {background-color: #000000;
     color: white
 }
 
+nav.controls {
+    position: fixed;
+    a:is(:link, :visited) {
+        border-radius: 50px;
+        display: flex;
+        align-items: center;
+        justify-content: center; 
+        background-color: #fff9;
+        height: 40px;
+        transform: scale(0.8);
+        opacity: 0.9;
+        padding: 10px;
+        width: 40px;
+        transition: all 0.4s ease-in;
+    }
+    a:is(:hover) {
+        opacity: 1;
+        transform: scale(1); 
+    }
+    svg {
+        width: 40px;
+    }   
+}
+
 main {
     align-items: center;
     display: flex;
@@ -48,7 +72,7 @@ main {
             width: 280px;
 
             i{
-                background-color: rgb(198, 129, 65);
+                background-color: rgba(138, 236, 121, 0.678);
                 border-radius: 20px;
                 color: #fff9;
                 font-style: normal;
@@ -63,11 +87,37 @@ main {
 
         a:is(:hover)  {
             transform: scale(1.2) translate(25px);
-            background-color: rgba(138, 236, 121, 0.678);
+            background-color: rgba(198, 129, 65, 0.836);
         }
 
         a:is(:hover) i {
             transform: scale(1.2) rotateX(360deg);
+        }
+    }
+
+    section {
+        border-radius: 10px;
+        background-color: rgba(255, 255, 255, 0.616);
+        color: rgb(3, 3, 3);
+        padding: 10px;
+        width: 400px;
+
+        h3 {
+            border-bottom: 2px dotted rgba(44, 44, 44, 0.603);
+            color: rgb(122, 58, 194);
+            font-size: 2rem;
+            margin: 0;
+            width: fit-content;  
+        }
+        p {
+            font-size: 1.4rem;
+            margin: 10px 0;
+        }
+        xmp {
+            border-radius: 10px;
+            background-color: rgba(44, 44, 44, 0.603);
+            color: #000;
+            padding: 0 10px 10px 10px; 
         }
     }
 }
