--- a/02-Html/css/relative.css
+++ b/02-Html/css/relative.css
@@ -55,3 +55,18 @@ main {
         }
     }
 }
+
+@media (max-width: 500px) {
+    main{
+        header {
+            flex-direction: column;
+            gap: 0.5rem;
+            a:is(:link, :visited) {
+                display: flex;
+                justify-content: center;
+                width: 98% !important;
+            }
+        }
+    } 
+
+}
