--- a/03-Css/css/master.css
+++ b/03-Css/css/master.css
@@ -38,6 +38,9 @@ main {
     min-height: 100vh;
 
     header {
+        display: flex;
+        flex-direction: column;
+        align-items: center;
         h1, h2 {
             color: #fff9;
             text-align: center;
@@ -50,6 +53,11 @@ main {
         h2 {
             font-size: 1.4rem;
             font-weight: 300;
+        }
+        img {
+            border-radius: 50%;
+            width: 160px;
+            border: 10px solid #fff9;
         }
     }
     menu {
