--- a/04-Pug/pug/16-mixin.pug
+++ b/04-Pug/pug/16-mixin.pug
@@ -2,12 +2,19 @@ doctype
 html(lang="en")
     head 
         meta(charset="UTF-8")
-        title Literal Attributes:
+        title Mixin :
         link(rel="stylesheet", href="../css/master.css")
     body 
         nav.controls
             a(href="../index.html") <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 512 512"><!--!Font Awesome Free 6.5.1 by @fontawesome - https://fontawesome.com License - https://fontawesome.com/license/free Copyright 2024 Fonticons, Inc.--><path fill="#ffffff" d="M41.4 233.4c-12.5 12.5-12.5 32.8 0 45.3l160 160c12.5 12.5 32.8 12.5 45.3 0s12.5-32.8 0-45.3L109.3 256 246.6 118.6c12.5-12.5 12.5-32.8 0-45.3s-32.8-12.5-45.3 0l-160 160zm352-160l-160 160c-12.5 12.5-12.5 32.8 0 45.3l160 160c12.5 12.5 32.8 12.5 45.3 0s12.5-32.8 0-45.3L301.3 256 438.6 118.6c12.5-12.5 12.5-32.8 0-45.3s-32.8-12.5-45.3 0z"/></svg>
         main 
             header 
-                h1 Literal Attributes   
+                h1 Mixin    
             section
+                mixin pet (name)
+                    li.pet=name
+                ul 
+                    +pet('Firulais') 
+                    +pet('Misifu') 
+                    +pet('Pinky') 
+                    +pet('Hawk') 
