--- a/04-Pug/pug/17-challenge.pug
+++ b/04-Pug/pug/17-challenge.pug
@@ -18,7 +18,7 @@ html(lang="en")
                     - var blue = 250
                     while i<=10
                         tr 
-                            td(style="background-color: rgb("+red+","+green+","+blue+"); height: 40px;")
+                            td(style="background-color: rgb("+red+","+green+","+blue+"); height: 40px; border-radius: 4px")
                             - i++
                             - blue -= 10
                             - green -= 25
