--- a/css/master.css
+++ b/css/master.css
@@ -86,5 +86,9 @@ main {
         a:is(:hover) i {
             transform: scale(1.2) rotateX(360deg);
         }
+        a.disabled{
+            opacity: 0.4;
+            cursor: not-allowed;
+        }
     }
 }
